# drf-tokens

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
drf/: models.py  serializers.py  urls.py
drf/migrations/: 0001_initial.py
